--- a/style.css
+++ b/style.css
@@ -70,6 +70,18 @@ li {
   width: 30px;
 }
 
+/* main */
+#main {
+  margin-bottom: 80px;
+}
+
+#main img {
+  width: 100%;
+  max-width: 1920px;
+  height: 400px;
+  object-fit: cover;
+}
+
 /* sp */
 @media screen and (max-width: 600px) {
   #header {
