add: works content

--- a/style.css
+++ b/style.css
@@ -111,6 +111,29 @@ li {
   margin-bottom: 30px;
 }
 
+/* works */
+#works ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+#works ul li {
+  width: 31%;
+  margin-bottom: 23px;
+}
+
+#works ul li img {
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+#works ul li img:hover {
+  transform: scale(1.2, 1.2);
+  opacity: 0.7;
+}
+
 /* sp */
 @media screen and (max-width: 600px) {
   #header {
@@ -128,5 +151,14 @@ li {
   #header li img.icon {
     width: 20px;
     margin-top: 15px;
+  }
+
+  /* works */
+  #works ul {
+    flex-direction: column;
+  }
+
+  #works ul li {
+    width: 100%;
   }
 }
